# docs/swagger.json
@@ -34,7 +34,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/fanucService.ConnectionResponse"
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     }
                 }
@@ -45,7 +45,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Connects to a Fanuc machine. Throws 500 if connection takes longer than 5 seconds.",
+                "description": "Connects to a Fanuc machine",
                 "consumes": [
                     "application/json"
                 ],
@@ -63,7 +63,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/fanucService.ConnectionRequest"
+                            "$ref": "#/definitions/models.ConnectionRequest"
                         }
                     }
                 ],
@@ -71,19 +71,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/fanucService.ConnectionResponse"
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fanucService.ConnectionResponse"
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fanucService.ConnectionResponse"
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     }
                 }
@@ -114,7 +114,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/fanucService.ConnectionResponse"
+                            "$ref": "#/definitions/models.APIResponse"
                         }
                     }
                 }
@@ -122,32 +122,7 @@
         }
     },
     "definitions": {
-        "fanucService.ConnectionRequest": {
-            "type": "object",
-            "required": [
-                "endpoint",
-                "series"
-            ],
-            "properties": {
-                "endpoint": {
-                    "description": "ip:port",
-                    "type": "string"
-                },
-                "model": {
-                    "description": "Model name",
-                    "type": "string"
-                },
-                "series": {
-                    "description": "\"0i\", \"31i\", etc",
-                    "type": "string"
-                },
-                "timeout": {
-                    "description": "ms, default 5000",
-                    "type": "integer"
-                }
-            }
-        },
-        "fanucService.ConnectionResponse": {
+        "models.APIResponse": {
             "type": "object",
             "properties": {
                 "data": {},
@@ -156,6 +131,30 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ConnectionRequest": {
+            "type": "object",
+            "required": [
+                "endpoint"
+            ],
+            "properties": {
+                "endpoint": {
+                    "description": "ip:port",
+                    "type": "string"
+                },
+                "model": {
+                    "description": "Human readable name",
+                    "type": "string"
+                },
+                "series": {
+                    "description": "\"0i\", \"31i\"",
+                    "type": "string"
+                },
+                "timeout": {
+                    "description": "ms, default 5000",
+                    "type": "integer"
                 }
             }
         }
